--- a/css/frame.css
+++ b/css/frame.css
@@ -597,15 +597,6 @@ div.group-content .group-description {
 	transition: all 0.3s ease;
 }
 
-.just-on-pro {
-	width: 250px;
-	height: 100px;
-	margin-bottom: 10px;
-	opacity: 0.8;
-	background: #f5f5f5  url("../images/available_pro.png") no-repeat scroll 0 1px !important;
-	cursor: not-allowed;
-}
-
 .from-web {
 	margin-top: 0;
 	margin-bottom: 15px !important;
@@ -896,15 +887,100 @@ button#editor-chart-button {
 #vz-chart-settings .group-header .group-title.main-group{
 
 }
+
+#vz-csv-file-form,
+#vz-one-time-import,
+#vz-schedule-import,
+.edit-data-content {
+	text-align: center;
+}
+
+#csv-file {
+	margin: 15px 0;
+	padding: 0;
+}
+
+.visualizer-input,
+.visualizer-select {
+    margin: 0 0 15px;
+    width: 100%;
+}
+
+.section-title .dashicons,
+.group-title .dashicons {
+    font-size: 18px;
+    height: 18px;
+    margin-left: 3px;
+    width: 18px;
+}
+
+.only-pro {
+    cursor: not-allowed !important;
+}
+
+.only-pro-feature {
+    position: relative;
+}
+
+.only-pro-content {
+    background: rgba(253,253,253,0.9);
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    -webkit-transition: 0.5s ease;
+    -moz-transition: 0.5s ease;
+    -ms-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    transition: 0.5s ease;
+}
+
+.only-pro-feature:hover .only-pro-content {
+    opacity: 1;
+}
+
+.only-pro-container {
+    display: table;
+    height: 100%;
+    width: 100%;
+}
+
+.only-pro-inner {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.only-pro-content p {
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0 0 15px;
+}
+
+.only-pro-content a {
+    background: #FF595E;
+    color: #fff;
+    display: inline-block;
+    font-weight: 600;
+    padding: 7px 12px;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    transition: 0.3s ease;
+}
+
+.only-pro-content a:hover {
+    background: #CE484C;
+}
+
+
 #sidebar::-webkit-scrollbar {
 	width: 4px;
 }
 #sidebar::-webkit-scrollbar-thumb {
 	background: #999;
-}
-#vz-csv-file-form {
-	text-align: center;
-}
-#vz-import-file{
-	margin-top:10px;
 }
