test new version #54
changes for new free, old pro

--- a/css/frame.css
+++ b/css/frame.css
@@ -933,6 +933,7 @@ button#editor-chart-button {
 .only-pro-feature button,
 .only-pro-feature select {
 	cursor: not-allowed !important;
+	pointer-events: none;
 }
 
 .only-pro-feature > div {
