add actions buttons #192

--- a/css/frame.css
+++ b/css/frame.css
@@ -996,3 +996,7 @@ button#editor-chart-button {
 #sidebar::-webkit-scrollbar-thumb {
 	background: #999;
 }
+
+span.section-error {
+	color: #ff000;
+}
